pywebapp/pywebapp-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pywebapp
  labels:
    app: pywebapp
spec:
  containers:
    - name: frontend
      image: python
      command: [ "python", "-m", "http.server", "8080" ]
      ports:
        - containerPort: 8080
